# game_test

./: .gitignore  CMakeLists.txt  Info.plist
cmake/: bundle.cmake
src/: Box.cpp  Box.h  Camera.h  Client.hpp  Collision.h  ColorRenderer.cpp  ColorRenderer.h  Constants.cpp  Constants.h  Direction.cpp  Direction.h  Draw.cpp  Draw.h  ENetClient.h  ENetServer.cpp  Entity.cpp  Entity.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  InputController.h  LocalGame.cpp  LocalGame.h  Message.h  PlayerInputController.cpp  PlayerInputController.h  Renderer.cpp  Renderer.h  SDLApp.cpp  SDLApp.h  SDLRenderUtils.cpp  SDLRenderUtils.h  SDLTextureManager.cpp  SDLTextureManager.h  Scene.cpp  Scene.h  Singleton.h  Stage.cpp  Stage.hpp  (+23 more)
src/Components/: Adjacencies.h  Animation.h  Animator.h  Box.h  Ceiling.h  Collider.h  Conveyor.h  Fake.h  Health.h  HealthChanger.h  InputController.h  Mass.h  Name.h  PositionHistory.h  Sprite.h  Trampoline.h  Type.h  Velocity.h
src/Networking/: ENetClient.cpp  ENetClient.h  ENetCommon.h  ENetServer.cpp  ENetServer.h  Message.cpp  Message.h
src/Screen/: ClientConnectToServerScreen.cpp  ClientConnectToServerScreen.h  ClientGameScreen.cpp  ClientGameScreen.h  LocalGameScreen.cpp  LocalGameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.cpp  Screen.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  StateSystem.cpp  StateSystem.h
src/proto/: game.proto
